[gd_scene load_steps=8 format=3 uid="uid://ckjfj1kxcsge6"]

[ext_resource type="Theme" uid="uid://y72soc2heqau" path="res://themes/theme.tres" id="1_g671f"]
[ext_resource type="Script" path="res://scenes/_shared/progress_menu.gd" id="2_e35o3"]
[ext_resource type="PackedScene" uid="uid://drjxqg6njqe0h" path="res://scenes/_shared/ui/h_selector.tscn" id="2_s01o1"]
[ext_resource type="PackedScene" uid="uid://t4mwxni2f1u5" path="res://scenes/_shared/ui/two_col_label.tscn" id="4_bducy"]
[ext_resource type="StyleBox" uid="uid://deqo7rbmjjsvj" path="res://resources/instances/odd_high_score_item.tres" id="5_yate7"]
[ext_resource type="StyleBox" uid="uid://c2d5slbtpw4ix" path="res://resources/instances/even_high_score_item.tres" id="6_736vx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qykqa"]
resource_local_to_scene = true
content_margin_left = 8.0
content_margin_right = 8.0
bg_color = Color(1, 1, 1, 0)

[node name="ProgressMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_g671f")
script = ExtResource("2_e35o3")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(204, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="RecordTypeSelector" parent="MarginContainer/PanelContainer/VBoxContainer" instance=ExtResource("2_s01o1")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
focus_neighbor_bottom = NodePath("../MarginContainer/GoBackBtn")
theme_override_styles/panel = SubResource("StyleBoxFlat_qykqa")
selector_text = ""
_options = ["MENU_PROGRESS_STARS", "MENU_PROGRESS_HIGH_SCORES"]
loop_options = false
selection_disabled = true
focus_color = Color(0.647059, 0.862745, 0.878431, 1)

[node name="LabelContainer" parent="MarginContainer/PanelContainer/VBoxContainer/RecordTypeSelector" index="0"]
size_flags_horizontal = 4
alignment = 1

[node name="NameLabel" parent="MarginContainer/PanelContainer/VBoxContainer/RecordTypeSelector/LabelContainer" index="0"]
text = ""

[node name="OptionLabel" parent="MarginContainer/PanelContainer/VBoxContainer/RecordTypeSelector/LabelContainer" index="2"]
text = "MENU_PROGRESS_STARS"

[node name="NextOptionLabel" parent="MarginContainer/PanelContainer/VBoxContainer/RecordTypeSelector/LabelContainer" index="3"]
text = " >"

[node name="EmptySpace" type="PanelContainer" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="SeparatorStart" type="ColorRect" parent="MarginContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="TwoColLabel0" parent="MarginContainer/PanelContainer/VBoxContainer" instance=ExtResource("4_bducy")]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 22)
layout_mode = 2
theme_override_styles/panel = ExtResource("5_yate7")
text_1 = "Día 1"
text_2 = "*****"

[node name="TwoColLabel1" parent="MarginContainer/PanelContainer/VBoxContainer" instance=ExtResource("4_bducy")]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 22)
layout_mode = 2
theme_override_styles/panel = ExtResource("6_736vx")
text_1 = "Día 2"
text_2 = "*****"

[node name="TwoColLabel2" parent="MarginContainer/PanelContainer/VBoxContainer" instance=ExtResource("4_bducy")]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 22)
layout_mode = 2
theme_override_styles/panel = ExtResource("5_yate7")
text_1 = "Día 2"
text_2 = "*****"

[node name="TwoColLabel3" parent="MarginContainer/PanelContainer/VBoxContainer" instance=ExtResource("4_bducy")]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 22)
layout_mode = 2
theme_override_styles/panel = ExtResource("6_736vx")
text_1 = "Día 2"
text_2 = "*****"

[node name="TwoColLabel4" parent="MarginContainer/PanelContainer/VBoxContainer" instance=ExtResource("4_bducy")]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 22)
layout_mode = 2
theme_override_styles/panel = ExtResource("5_yate7")
text_1 = "Día 1"
text_2 = "*****"

[node name="TwoColLabel5" parent="MarginContainer/PanelContainer/VBoxContainer" instance=ExtResource("4_bducy")]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 22)
layout_mode = 2
theme_override_styles/panel = ExtResource("6_736vx")
text_1 = "Día 1"
text_2 = "*****"

[node name="TwoColLabel6" parent="MarginContainer/PanelContainer/VBoxContainer" instance=ExtResource("4_bducy")]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 22)
layout_mode = 2
theme_override_styles/panel = ExtResource("5_yate7")
text_1 = "Día 1"
text_2 = "*****"

[node name="TwoColLabel7" parent="MarginContainer/PanelContainer/VBoxContainer" instance=ExtResource("4_bducy")]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 22)
layout_mode = 2
theme_override_styles/panel = ExtResource("6_736vx")
text_1 = "Día 1"
text_2 = "*****"

[node name="TwoColLabel8" parent="MarginContainer/PanelContainer/VBoxContainer" instance=ExtResource("4_bducy")]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 22)
layout_mode = 2
theme_override_styles/panel = ExtResource("5_yate7")
text_1 = "Día 1"
text_2 = "*****"

[node name="SeparatorEnd" type="ColorRect" parent="MarginContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 0
theme_override_constants/margin_top = 4

[node name="GoBackBtn" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
focus_neighbor_top = NodePath("../../RecordTypeSelector")
mouse_filter = 2
button_mask = 0
text = "MENU_PROGRESS_QUIT"
alignment = 2

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="current_option_index_changed" from="MarginContainer/PanelContainer/VBoxContainer/RecordTypeSelector" to="." method="_on_record_type_label_current_option_index_changed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/MarginContainer/GoBackBtn" to="." method="_on_go_back_btn_pressed"]

[editable path="MarginContainer/PanelContainer/VBoxContainer/RecordTypeSelector"]
